--- a/createguifo.html
+++ b/createguifo.html
@@ -58,6 +58,7 @@
         <div class="list-gifs" id="list-mis-gifos"></div>
     </section>
 </section>
+<script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="createguifo.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
 <script src="https://www.webrtc-experiment.com/gif-recorder.js"></script>
