--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
     <title>gifOS</title>
 </head>
@@ -30,15 +30,17 @@
                     <button class='btn dropdown'>
                         <img src='./assets/icons/dropdown.svg'>
                     </button>
-                    <div id="dropdown-change-theme" class="btn-dropdown-content" onclick="changeThemeOfPage()">
+                    <div id="dropdown-change-theme" class="btn-dropdown-content">
                         <button class='theme-option sailor-day'
                             id='btn-sailor-day'
-                            value="sailor-day">
+                            value="sailor-day"
+                            onclick="changeThemeOfPage(this.id)">
                             <span class='text-underlined'>S</span>ailor Day</button>
                         <button class='theme-option sailor-night' 
                             id='btn-sailor-night'
                             value="sailor-night"
-                            >Sailor Night</button>
+                            onclick="changeThemeOfPage(this.id)">
+                            Sailor Night</button>
                     </div>
                 </nav>
                 <buttton class='btn text-misGuifos'
@@ -60,7 +62,7 @@
                 <button class="btn-search" id='idBtnSearch'
                     type="button"
                     disabled
-                    onclick="searchGif()">
+                    onclick="onClickSearchGif()">
                     <img class='magnifying-glass-icon' src='./assets/icons/lupa.svg'>          
                     <span>Buscar</span>
                 </button>
