--- a/misguifos.html
+++ b/misguifos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/misguifos.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
     <title>gifOS</title>
 </head>
@@ -53,7 +54,9 @@
         <div class="title list-gif">Mis guifos:</div>
         <div class="list-gifs" id="list-mis-gifos"></div>
     </section>
-    <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="misguifos.js"></script>
 </body>
 
 </html>
