refactor my guifos section

--- a/createguifo.html
+++ b/createguifo.html
@@ -49,6 +49,8 @@
                 onclick="createGif()"
             >Comenzar</button>
         </div>
+        <!-- PROGRESSSIVE BAR -->
+
     </div>
 
     <!-- <div class="title misGuifos">Mis guifos</div> -->
@@ -59,6 +61,8 @@
     </section>
 </section>
 <script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="misguifos.js"></script>
 <script type="text/javascript" src="createguifo.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
 <script src="https://www.webrtc-experiment.com/gif-recorder.js"></script>
